# tlang

./: .gitignore  CMakeLists.txt  README.md  def_make_make.py  defaults.cmake  files_make_make.py  front_make_make.py  grammar  main_make_make.py  make_front  make_make.py  notes  tlang_front
examples/: enum_decl_test.tlang  example.tlang  factorial.tlang  fibonachi.tlang  func_decl_test.tlang  import_test.tlang  statement.tlang  sum_of_n.tlang
examples/quadratic/: main.tlang
frontend/src/include/: ast_builder.h  lexer.h  tlang_key_words.h  tlang_punctuation.h
frontend/src/source/: ast_builder.c  frontend.c  lexer.c  main.c
lib_code/include/: bin_file.h  color.h  debug.h  lib_config.h  logging.h  my_typedefs.h
lib_code/source/: bin_file.c
src/: main.c
src/backend_general/: CMakeLists.txt
src/backend_general/include/: arch_def.h  backend.h
src/frontend/: CMakeLists.txt
src/frontend/include/: ast_builder.h  ast_dump.h  ast_to_ir.h  frontend.h  lexer.h  tlang_key_words.inc  tlang_operators.inc  token_def.h  tree.h
src/frontend/source/: ast_builder.c  ast_dump.c  ast_to_ir.c  frontend.c  lexer.c  main.c  tree.c
src/lib_code/: CMakeLists.txt
src/lib_code/include/: alloc_wraper.h  attr.h  bin_file.h  darray.h  debug.h  file_wraper.h  lib_config.h  list.h  my_assert.h  my_typedefs.h  opt.h  recalloc.h  string_view.h  tree.h  utils.h
src/lib_code/source/: alloc_wraper.c  bin_file.c  darray.c  file_wraper.c  list.c  my_assert.c  racalloc.c  tree.c  utils.c
src/middleend/: CMakeLists.txt
src/shared/: CMakeLists.txt
src/shared/include/: io64lib.h  (+8 more)
src/x86_64_backend/: CMakeLists.txt
tree/source/: tree.c
(+15 files in other folders)
